# text-classifiers

./: .gitignore  README.md  pyproject.toml
text_classifiers/: train.py
text_classifiers/helpers/: __init__.py
text_classifiers/options/embeddings/: __init__.py  create.py
text_classifiers/options/tfidf/: __init__.py
